# test_ui

./: conftest.py  pyproject.toml  settings.yaml
clients/: __init__.py  rest.py
ext_allure/: __init__.py
ext_playwright/: base.py  base_locale.py  base_locator.py  base_page.py
ext_selenium/: driver.py  element.py  jquery.py  performance.py  switch_to.py  wait.py  webdriver_factory.py
ext_selenium/scripts/: allure_reporting.py  cli.py  conftest.py
steps/: __init__.py
steps/jsonplaceholder/: rest.py
tests/yandex_passport/: test_first.py
tests/yandex_passport/pages/: registration_page.py
utils/: base_data_factory.py  checkers.py
